BattleSimVSProject/Antlr/Generated/BattleSimParser.cpp

// Generated from ./BattleSimVSProject/Antlr/BattleSim.g4 by ANTLR 4.13.2


#include "BattleSimListener.h"
#include "BattleSimVisitor.h"

#include "BattleSimParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct BattleSimParserStaticData final {
  BattleSimParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  BattleSimParserStaticData(const BattleSimParserStaticData&) = delete;
  BattleSimParserStaticData(BattleSimParserStaticData&&) = delete;
  BattleSimParserStaticData& operator=(const BattleSimParserStaticData&) = delete;
  BattleSimParserStaticData& operator=(BattleSimParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag battlesimParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<BattleSimParserStaticData> battlesimParserStaticData = nullptr;

void battlesimParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (battlesimParserStaticData != nullptr) {
    return;
  }
#else
  assert(battlesimParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<BattleSimParserStaticData>(
    std::vector<std::string>{
      "battleSim", "map", "teamDef", "unitDef", "unitStats", "unitLogicSequence", 
      "logicCommand", "moveCmd", "turnCmd", "turnLeftCmd", "turnRightCmd", 
      "turnOrientationCmd", "ifCondition", "whileCycle", "attackCmd", "attackAroundSelfCmd", 
      "attackInFrontCmd", "rangeAttackCmd", "skipCmd", "boolexp", "orExpr", 
      "andExpr", "notExpr", "primaryBool", "true", "false", "parenthesesBool", 
      "comparisonBool", "orientationEqualityCheck", "enemyNearbyCheck", 
      "blockCheck", "isFrontClearCheck", "isFrontBlockedCheck", "orientationCheck", 
      "facingNCheck", "facingWCheck", "facingECheck", "facingSCheck", "orientation", 
      "getNearbyEnemyOrientation", "getMyOrientation", "exp", "atomicExp", 
      "parenthesesExp"
    },
    std::vector<std::string>{
      "", "'TeamBlue'", "'{'", "'}'", "'TeamRed'", "'x'", "';'", "'unit'", 
      "'at'", "'('", "','", "')'", "'health:'", "'attack:'", "'MoveForward()'", 
      "'TurnLeft()'", "'TurnRight()'", "'Turn('", "'if'", "'then'", "'else'", 
      "'while'", "'do'", "'AttackAroundSelf()'", "'AttackInFront()'", "'RangeAttack('", 
      "'skip'", "'||'", "'&&'", "'!'", "'true'", "'false'", "'=='", "'!='", 
      "'IsEnemyNearby()'", "'IsFrontClear()'", "'IsFrontBlocked()'", "'FacingNorth()'", 
      "'FacingWest()'", "'FacingEast()'", "'FacingSouth()'", "'GetNearbyEnemyOrientation()'", 
      "'GetMyOrientation()'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "MATHSYMBOL", "COMPSYMBOL", "ORIENTATION", 
      "NAME", "NUMBER", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  battlesimParserStaticData = std::move(staticData);
}

}

BattleSimParser::BattleSimParser(TokenStream *input) : BattleSimParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

BattleSimParser::BattleSimParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  BattleSimParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *battlesimParserStaticData->atn, battlesimParserStaticData->decisionToDFA, battlesimParserStaticData->sharedContextCache, options);
}

BattleSimParser::~BattleSimParser() {
  delete _interpreter;
}

const atn::ATN& BattleSimParser::getATN() const {
  return *battlesimParserStaticData->atn;
}

std::string BattleSimParser::getGrammarFileName() const {
  return "BattleSim.g4";
}

const std::vector<std::string>& BattleSimParser::getRuleNames() const {
  return battlesimParserStaticData->ruleNames;
}

const dfa::Vocabulary& BattleSimParser::getVocabulary() const {
  return battlesimParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView BattleSimParser::getSerializedATN() const {
  return battlesimParserStaticData->serializedATN;
}


//----------------- BattleSimContext ------------------------------------------------------------------

BattleSimParser::BattleSimContext::BattleSimContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BattleSimParser::MapContext* BattleSimParser::BattleSimContext::map() {
  return getRuleContext<BattleSimParser::MapContext>(0);
}

std::vector<BattleSimParser::TeamDefContext *> BattleSimParser::BattleSimContext::teamDef() {
  return getRuleContexts<BattleSimParser::TeamDefContext>();
}

BattleSimParser::TeamDefContext* BattleSimParser::BattleSimContext::teamDef(size_t i) {
  return getRuleContext<BattleSimParser::TeamDefContext>(i);
}


size_t BattleSimParser::BattleSimContext::getRuleIndex() const {
  return BattleSimParser::RuleBattleSim;
}

void BattleSimParser::BattleSimContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BattleSimListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBattleSim(this);
}

void BattleSimParser::BattleSimContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BattleSimListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBattleSim(this);
}


std::any BattleSimParser::BattleSimContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BattleSimVisitor*>(visitor))
    return parserVisitor->visitBattleSim(this);
  else
    return visitor->visitChildren(this);
}

BattleSimParser::BattleSimContext* BattleSimParser::battleSim() {
  BattleSimContext *_localctx = _tracker.createInstance<BattleSimContext>(_ctx, getState());
  enterRule(_localctx, 0, BattleSimParser::RuleBattleSim);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    map();
    setState(89);
    match(BattleSimParser::T__0);
    setState(90);
    match(BattleSimParser::T__1);
    setState(91);
    teamDef();
    setState(92);
    match(BattleSimParser::T__2);
    setState(93);
    match(BattleSimParser::T__3);
    setState(94);
    match(BattleSimParser::T__1);
    setState(95);
    teamDef();
    setState(96);
    match(BattleSimParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MapContext ------------------------------------------------------------------

BattleSimParser::MapContext::MapContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> BattleSimParser::MapContext::NUMBER() {
  return getTokens(BattleSimParser::NUMBER);
}

tree::TerminalNode* BattleSimParser::MapContext::NUMBER(size_t i) {
  return getToken(BattleSimParser::NUMBER, i);
}


size_t BattleSimParser::MapContext::getRuleIndex() const {
  return BattleSimParser::RuleMap;
}

void BattleSimParser::MapContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BattleSimListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMap(this);
}

void BattleSimParser::MapContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BattleSimListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMap(this);
}


std::any BattleSimParser::MapContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BattleSimVisitor*>(visitor))
    return parserVisitor->visitMap(this);
  else
    return visitor->visitChildren(this);
}

BattleSimParser::MapContext* BattleSimParser::map() {
  MapContext *_localctx = _tracker.createInstance<MapContext>(_ctx, getState());
  enterRule(_localctx, 2, BattleSimParser::RuleMap);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    match(BattleSimParser::NUMBER);
    setState(99);
    match(BattleSimParser::T__4);
    setState(100);
    match(BattleSimParser::NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TeamDefContext ------------------------------------------------------------------

BattleSimParser::TeamDefContext::TeamDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<BattleSimParser::UnitDefContext *> BattleSimParser::TeamDefContext::unitDef() {
  return getRuleContexts<BattleSimParser::UnitDefContext>();
}

BattleSimParser::UnitDefContext* BattleSimParser::TeamDefContext::unitDef(size_t i) {
  return getRuleContext<BattleSimParser::UnitDefContext>(i);
}


size_t BattleSimParser::TeamDefContext::getRuleIndex() const {
  return BattleSimParser::RuleTeamDef;
}

void BattleSimParser::TeamDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BattleSimListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTeamDef(this);
}

void BattleSimParser::TeamDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BattleSimListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTeamDef(this);
}


std::any BattleSimParser::TeamDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BattleSimVisitor*>(visitor))
    return parserVisitor->visitTeamDef(this);
  else
    return visitor->visitChildren(this);
}

BattleSimParser::TeamDefContext* BattleSimParser::teamDef() {
  TeamDefContext *_localctx = _tracker.createInstance<TeamDefContext>(_ctx, getState());
  enterRule(_localctx, 4, BattleSimParser::RuleTeamDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(102);
      unitDef();
      setState(103);
      match(BattleSimParser::T__5);
      setState(107); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == BattleSimParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnitDefContext ------------------------------------------------------------------

BattleSimParser::UnitDefContext::UnitDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BattleSimParser::UnitDefContext::NAME() {
  return getToken(BattleSimParser::NAME, 0);
}

std::vector<tree::TerminalNode *> BattleSimParser::UnitDefContext::NUMBER() {
  return getTokens(BattleSimParser::NUMBER);
}

tree::TerminalNode* BattleSimParser::UnitDefContext::NUMBER(size_t i) {
  return getToken(BattleSimParser::NUMBER, i);
}

BattleSimParser::UnitStatsContext* BattleSimParser::UnitDefContext::unitStats() {
  return getRuleContext<BattleSimParser::UnitStatsContext>(0);
}

BattleSimParser::UnitLogicSequenceContext* BattleSimParser::UnitDefContext::unitLogicSequence() {
  return getRuleContext<BattleSimParser::UnitLogicSequenceContext>(0);
}


size_t BattleSimParser::UnitDefContext::getRuleIndex() const {
  return BattleSimParser::RuleUnitDef;
}

void BattleSimParser::UnitDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BattleSimListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnitDef(this);
}

void BattleSimParser::UnitDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BattleSimListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnitDef(this);
}


std::any BattleSimParser::UnitDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BattleSimVisitor*>(visitor))
    return parserVisitor->visitUnitDef(this);
  else
    return visitor->visitChildren(this);
}

BattleSimParser::UnitDefContext* BattleSimParser::unitDef() {
  UnitDefContext *_localctx = _tracker.createInstance<UnitDefContext>(_ctx, getState());
  enterRule(_localctx, 6, BattleSimParser::RuleUnitDef);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    match(BattleSimParser::T__6);
    setState(110);
    match(BattleSimParser::NAME);
    setState(111);
    match(BattleSimParser::T__7);
    setState(112);
    match(BattleSimParser::T__8);
    setState(113);
    match(BattleSimParser::NUMBER);
    setState(114);
    match(BattleSimParser::T__9);
    setState(115);
    match(BattleSimParser::NUMBER);
    setState(116);
    match(BattleSimParser::T__10);
    setState(117);
    match(BattleSimParser::T__1);
    setState(118);
    unitStats();
    setState(119);
    unitLogicSequence();
    setState(120);
    match(BattleSimParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnitStatsContext ------------------------------------------------------------------

BattleSimParser::UnitStatsContext::UnitStatsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> BattleSimParser::UnitStatsContext::NUMBER() {
  return getTokens(BattleSimParser::NUMBER);
}

tree::TerminalNode* BattleSimParser::UnitStatsContext::NUMBER(size_t i) {
  return getToken(BattleSimParser::NUMBER, i);
}


size_t BattleSimParser::UnitStatsContext::getRuleIndex() const {
  return BattleSimParser::RuleUnitStats;
}

void BattleSimParser::UnitStatsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BattleSimListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnitStats(this);
}

void BattleSimParser::UnitStatsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BattleSimListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnitStats(this);
}


std::any BattleSimParser::UnitStatsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BattleSimVisitor*>(visitor))
    return parserVisitor->visitUnitStats(this);
  else
    return visitor->visitChildren(this);
}

BattleSimParser::UnitStatsContext* BattleSimParser::unitStats() {
  UnitStatsContext *_localctx = _tracker.createInstance<UnitStatsContext>(_ctx, getState());
  enterRule(_localctx, 8, BattleSimParser::RuleUnitStats);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(122);
    match(BattleSimParser::T__11);
    setState(123);
    match(BattleSimParser::NUMBER);
    setState(124);
    match(BattleSimParser::T__5);
    setState(125);
    match(BattleSimParser::T__12);
    setState(126);
    match(BattleSimParser::NUMBER);
    setState(127);
    match(BattleSimParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnitLogicSequenceContext ------------------------------------------------------------------

BattleSimParser::UnitLogicSequenceContext::UnitLogicSequenceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<BattleSimParser::LogicCommandContext *> BattleSimParser::UnitLogicSequenceContext::logicCommand() {
  return getRuleContexts<BattleSimParser::LogicCommandContext>();
}

BattleSimParser::LogicCommandContext* BattleSimParser::UnitLogicSequenceContext::logicCommand(size_t i) {
  return getRuleContext<BattleSimParser::LogicCommandContext>(i);
}


size_t BattleSimParser::UnitLogicSequenceContext::getRuleIndex() const {
  return BattleSimParser::RuleUnitLogicSequence;
}

void BattleSimParser::UnitLogicSequenceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BattleSimListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnitLogicSequence(this);
}

void BattleSimParser::UnitLogicSequenceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BattleSimListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnitLogicSequence(this);
}


std::any BattleSimParser::UnitLogicSequenceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BattleSimVisitor*>(visitor))
    return parserVisitor->visitUnitLogicSequence(this);
  else
    return visitor->visitChildren(this);
}

BattleSimParser::UnitLogicSequenceContext* BattleSimParser::unitLogicSequence() {
  UnitLogicSequenceContext *_localctx = _tracker.createInstance<UnitLogicSequenceContext>(_ctx, getState());
  enterRule(_localctx, 10, BattleSimParser::RuleUnitLogicSequence);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(129);
    match(BattleSimParser::T__1);
    setState(135);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 128434176) != 0)) {
      setState(130);
      logicCommand();
      setState(131);
      match(BattleSimParser::T__5);
      setState(137);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(138);
    match(BattleSimParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LogicCommandContext ------------------------------------------------------------------

BattleSimParser::LogicCommandContext::LogicCommandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BattleSimParser::MoveCmdContext* BattleSimParser::LogicCommandContext::moveCmd() {
  return getRuleContext<BattleSimParser::MoveCmdContext>(0);
}

BattleSimParser::TurnCmdContext* BattleSimParser::LogicCommandContext::turnCmd() {
  return getRuleContext<BattleSimParser::TurnCmdContext>(0);
}

BattleSimParser::IfConditionContext* BattleSimParser::LogicCommandContext::ifCondition() {
  return getRuleContext<BattleSimParser::IfConditionContext>(0);
}

BattleSimParser::WhileCycleContext* BattleSimParser::LogicCommandContext::whileCycle() {
  return getRuleContext<BattleSimParser::WhileCycleContext>(0);
}

BattleSimParser::AttackCmdContext* BattleSimParser::LogicCommandContext::attackCmd() {
  return getRuleContext<BattleSimParser::AttackCmdContext>(0);
}

BattleSimParser::SkipCmdContext* BattleSimParser::LogicCommandContext::skipCmd() {
  return getRuleContext<BattleSimParser::SkipCmdContext>(0);
}


size_t BattleSimParser::LogicCommandContext::getRuleIndex() const {
  return BattleSimParser::RuleLogicCommand;
}

void BattleSimParser::LogicCommandContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BattleSimListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLogicCommand(this);
}

void BattleSimParser::LogicCommandContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BattleSimListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLogicCommand(this);
}


std::any BattleSimParser::LogicCommandContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BattleSimVisitor*>(visitor))
    return parserVisitor->visitLogicCommand(this);
  else
    return visitor->visitChildren(this);
}

BattleSimParser::LogicCommandContext* BattleSimParser::logicCommand() {
  LogicCommandContext *_localctx = _tracker.createInstance<LogicCommandContext>(_ctx, getState());
  enterRule(_localctx, 12, BattleSimParser::RuleLogicCommand);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(146);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case BattleSimParser::T__13: {
        enterOuterAlt(_localctx, 1);
        setState(140);
        moveCmd();
        break;
      }

      case BattleSimParser::T__14:
      case BattleSimParser::T__15:
      case BattleSimParser::T__16: {
        enterOuterAlt(_localctx, 2);
        setState(141);
        turnCmd();
        break;
      }

      case BattleSimParser::T__17: {
        enterOuterAlt(_localctx, 3);
        setState(142);
        ifCondition();
        break;
      }

      case BattleSimParser::T__20: {
        enterOuterAlt(_localctx, 4);
        setState(143);
        whileCycle();
        break;
      }

      case BattleSimParser::T__22:
      case BattleSimParser::T__23:
      case BattleSimParser::T__24: {
        enterOuterAlt(_localctx, 5);
        setState(144);
        attackCmd();
        break;
      }

      case BattleSimParser::T__25: {
        enterOuterAlt(_localctx, 6);
        setState(145);
        skipCmd();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MoveCmdContext ------------------------------------------------------------------

BattleSimParser::MoveCmdContext::MoveCmdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t BattleSimParser::MoveCmdContext::getRuleIndex() const {
  return BattleSimParser::RuleMoveCmd;
}

void BattleSimParser::MoveCmdContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BattleSimListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMoveCmd(this);
}

void BattleSimParser::MoveCmdContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BattleSimListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMoveCmd(this);
}


std::any BattleSimParser::MoveCmdContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BattleSimVisitor*>(visitor))
    return parserVisitor->visitMoveCmd(this);
  else
    return visitor->visitChildren(this);
}

BattleSimParser::MoveCmdContext* BattleSimParser::moveCmd() {
  MoveCmdContext *_localctx = _tracker.createInstance<MoveCmdContext>(_ctx, getState());
  enterRule(_localctx, 14, BattleSimParser::RuleMoveCmd);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(148);
    match(BattleSimParser::T__13);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TurnCmdContext ------------------------------------------------------------------

BattleSimParser::TurnCmdContext::TurnCmdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BattleSimParser::TurnLeftCmdContext* BattleSimParser::TurnCmdContext::turnLeftCmd() {
  return getRuleContext<BattleSimParser::TurnLeftCmdContext>(0);
}

BattleSimParser::TurnRightCmdContext* BattleSimParser::TurnCmdContext::turnRightCmd() {
  return getRuleContext<BattleSimParser::TurnRightCmdContext>(0);
}

BattleSimParser::TurnOrientationCmdContext* BattleSimParser::TurnCmdContext::turnOrientationCmd() {
  return getRuleContext<BattleSimParser::TurnOrientationCmdContext>(0);
}


size_t BattleSimParser::TurnCmdContext::getRuleIndex() const {
  return BattleSimParser::RuleTurnCmd;
}

void BattleSimParser::TurnCmdContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BattleSimListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTurnCmd(this);
}

void BattleSimParser::TurnCmdContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BattleSimListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTurnCmd(this);
}


std::any BattleSimParser::TurnCmdContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BattleSimVisitor*>(visitor))
    return parserVisitor->visitTurnCmd(this);
  else
    return visitor->visitChildren(this);
}

BattleSimParser::TurnCmdContext* BattleSimParser::turnCmd() {
  TurnCmdContext *_localctx = _tracker.createInstance<TurnCmdContext>(_ctx, getState());
  enterRule(_localctx, 16, BattleSimParser::RuleTurnCmd);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(153);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case BattleSimParser::T__14: {
        enterOuterAlt(_localctx, 1);
        setState(150);
        turnLeftCmd();
        break;
      }

      case BattleSimParser::T__15: {
        enterOuterAlt(_localctx, 2);
        setState(151);
        turnRightCmd();
        break;
      }

      case BattleSimParser::T__16: {
        enterOuterAlt(_localctx, 3);
        setState(152);
        turnOrientationCmd();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TurnLeftCmdContext ------------------------------------------------------------------

BattleSimParser::TurnLeftCmdContext::TurnLeftCmdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t BattleSimParser::TurnLeftCmdContext::getRuleIndex() const {
  return BattleSimParser::RuleTurnLeftCmd;
}

void BattleSimParser::TurnLeftCmdContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BattleSimListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTurnLeftCmd(this);
}
